<?xml version="1.0" encoding="utf-8"?>

<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="8dp">

    <ImageView
        android:id="@+id/imageView25"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="9dp"
        android:contentDescription="@string/shadow_background"
        app:layout_constraintBottom_toBottomOf="@+id/sender"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/sender"
        app:srcCompat="@mipmap/message_list_profile" />

    <ImageView
        android:id="@+id/profileImage"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="7dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/profile_pic_20_corner"
        android:contentDescription="@string/profile_image"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="@+id/sender"
        app:layout_constraintStart_toStartOf="@+id/imageView25"
        app:layout_constraintTop_toTopOf="@+id/imageView25"
        app:layout_constraintVertical_bias="0.074"
        app:srcCompat="@mipmap/profile_image" />

    <TextView
        android:id="@+id/sender"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="22dp"
        android:fontFamily="@font/lato"
        android:hint="@string/notification_text"
        android:textColor="#111111"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/profileImage"
        app:layout_constraintTop_toTopOf="parent" />

</android.support.constraint.ConstraintLayout>