<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".HomeTabFragement.MessageTabFragement">

    <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/grey_background_color"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:context=".MessageActivity"
        tools:showIn="@layout/activity_message">


        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar3"
            android:layout_width="match_parent"
            android:layout_height="53dp"
            android:background="?attr/colorPrimary"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imageView33"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/application_logo_title"
            android:src="@mipmap/navi_logo"
            app:layout_constraintBottom_toBottomOf="@+id/toolbar3"
            app:layout_constraintEnd_toStartOf="@+id/toolbar3"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/toolbar3"
            app:layout_constraintTop_toTopOf="@+id/toolbar3"
            app:layout_constraintVertical_bias="0.666" />

        <android.support.design.widget.TabLayout

            android:id="@+id/tabs_main"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:background="@color/whiteColor"
            android:elevation="2dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar3"
            app:tabIndicatorColor="@color/colorPrimary"
            app:tabSelectedTextColor="#634789"
            app:tabTextColor="#676767">

            <android.support.design.widget.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/message_tab_chat" />

            <android.support.design.widget.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/message_tab_alert" />

        </android.support.design.widget.TabLayout>

        <android.support.v4.view.ViewPager
            android:id="@+id/viewpager_main"
            android:layout_width="382dp"
            android:layout_height="0dp"
            android:layout_marginBottom="56dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tabs_main">

        </android.support.v4.view.ViewPager>

        <Button
            android:id="@+id/button12"
            android:layout_width="2dp"
            android:layout_height="20dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:background="@color/grey_background_color"
            app:layout_constraintBottom_toTopOf="@+id/viewpager_main"
            app:layout_constraintEnd_toStartOf="@+id/tabs_main"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/tabs_main"
            app:layout_constraintTop_toTopOf="@+id/tabs_main" />

    </android.support.constraint.ConstraintLayout>


</FrameLayout>